--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="dist/css/main.css">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,12 +15,33 @@
   </style>
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
 
-  We are creatives
+  <header>
+      <nav class="top">
+        <h2>sunnyside</h2>
+        <div class="top--menu active">
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Projects</a>
+          <button><a href="#">contact</a></button>
+
+
+
+        </div>
+
+      </nav>
+      <h1>We are creatives</h1>
+      <img src="/images/icon-arrow-down.svg" alt="Arrow Donw">
+      <img src="/images/desktop/image-header.jpg" alt="Half of orange">
+
+
+
+
+
+  </header>
+ 
+
+  
 
   Transform your brand
 
