--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
           </div>
         <a href="#" class="learn-more">Learn more</a>
 
+        </div>
+      </section>
+    </div>
+        
+
 
 
         
