--- a/index.html
+++ b/index.html
@@ -89,7 +89,32 @@
         <a href="#" class="learn-more">Learn more</a>
 
         </div>
+        <div class="disclaimer cherry">
+          <div class="text">
+
+            <h2>Graphic design</h2>
+             <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+
+
+
+          </div>
+          
+
+
+
+
+
+        </div>
+        <div class="disclaimer orange">
+          <h2>Photography</h2>
+          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+
+
+
+
+        </div>
       </section>
+
     </div>
         
 
@@ -141,11 +166,11 @@
 
   Learn more
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+  
+  
 
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+  
+  
 
   Client testimonials
 
